--- a/TaskTracker/TaskTracker/Views/RegisterPage.xaml
+++ b/TaskTracker/TaskTracker/Views/RegisterPage.xaml
@@ -4,11 +4,11 @@
              x:Class="TaskTracker.Views.RegisterPage">
     <ContentPage.Content>
         <StackLayout Padding="5,50" Spacing="20">
-                <StackLayout Spacing="10">
-                    <Entry Text="{Binding Mail}" Placeholder="Mail" Keyboard="Email" TextColor="White" HeightRequest="50"></Entry>
-                    <Entry Text="{Binding Login}" Placeholder="Login" Keyboard="Text" TextColor="White" HeightRequest="50"></Entry>
-                    <Entry Text="{Binding PasswordOne}" Placeholder="Hasło" IsPassword="True" TextColor="White" HeightRequest="50"></Entry>
-                    <Entry Text="{Binding PasswordTwo}" Placeholder="Hasło" IsPassword="True" TextColor="White" HeightRequest="50"></Entry>
+            <StackLayout Spacing="10">
+                <Entry Text="{Binding Login}" Placeholder="Login" Keyboard="Text" TextColor="Black" HeightRequest="50"></Entry>
+                <Entry Text="{Binding Mail}" Placeholder="Mail" Keyboard="Email" TextColor="Black" HeightRequest="50"></Entry>
+                <Entry Text="{Binding PasswordOne}" Placeholder="Hasło" IsPassword="True" TextColor="Black" HeightRequest="50"></Entry>
+                <Entry Text="{Binding PasswordTwo}" Placeholder="Hasło" IsPassword="True" TextColor="Black" HeightRequest="50"></Entry>
             </StackLayout>
 
             <Button Command="{Binding RegisterCommand}" Text="Zarejestruj"></Button>
