--- a/TestApp/MainWindow.xaml
+++ b/TestApp/MainWindow.xaml
@@ -7,6 +7,11 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Button Click="ButtonBase_OnClick"></Button>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Button Grid.Column="0" Click="ButtonBase_OnClick" Margin="30" >Login</Button>
+        <Button Grid.Column="1" Click="ButtonBase2_OnClick" Margin="30" >Get users</Button>
     </Grid>
 </Window>
