--- a/TaskTracker/TaskTracker/Views/BoardPage.xaml
+++ b/TaskTracker/TaskTracker/Views/BoardPage.xaml
@@ -1,13 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TaskTracker.Views.BoardPage">
+             x:Class="TaskTracker.Views.BoardPage"
+             x:Name="_BoardPage">
 
     <StackLayout>
         <ListView ItemsSource="{Binding UserBoards}" SelectedItem="{Binding SelectedBoard}" IsPullToRefreshEnabled="True" RefreshCommand="{Binding RefreshCommand}" IsRefreshing="{Binding IsRefreshing}">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <TextCell Text="{Binding Name}"></TextCell>
+                    <TextCell Text="{Binding Name}">
+                        <TextCell.ContextActions>
+                            <MenuItem Text="Edytuj" IsDestructive="True" Command="{Binding Path=BindingContext.EditBoardCommand, Source={x:Reference _BoardPage}}" CommandParameter="{Binding .}"></MenuItem>
+                            <MenuItem Text="Usuń" IsDestructive="True" Command="{Binding Path=BindingContext.DeleteBoardCommand, Source={x:Reference _BoardPage}}"></MenuItem>
+                        </TextCell.ContextActions>
+                    </TextCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
