--- a/TaskTracker/TaskTracker/Views/MainPage.xaml
+++ b/TaskTracker/TaskTracker/Views/MainPage.xaml
@@ -2,11 +2,11 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:TaskTracker"
-             x:Class="TaskTracker.Views.MainPage">
-    <!--xmlns:control="clr-namespace:Xamarin.Forms;assembly=Xamarin.Forms.CarouselView">-->
+             x:Class="TaskTracker.Views.MainPage"
+    xmlns:control="clr-namespace:Xamarin.Forms;assembly=Xamarin.Forms.CarouselView">
 
     <StackLayout>
-        <!--<control:CarouselView ItemsSource="{Binding SelectedBoard.ColumnsCollection}">
+        <control:CarouselView ItemsSource="{Binding SelectedBoard.ColumnsCollection}">
             <control:CarouselView.ItemTemplate>
                 <DataTemplate>
                     <StackLayout Margin="20">
@@ -21,6 +21,6 @@
                     </StackLayout>
                 </DataTemplate>
             </control:CarouselView.ItemTemplate>
-        </control:CarouselView>-->
+        </control:CarouselView>
     </StackLayout>
 </ContentPage>
