--- a/TaskTracker/TaskTracker/Views/Controls/BoardListItem.xaml
+++ b/TaskTracker/TaskTracker/Views/Controls/BoardListItem.xaml
@@ -1,14 +1,23 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:xForms="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfListView.XForms"
              x:Class="TaskTracker.Views.Controls.BoardListItem">
     <ContentView.Content>
-        <StackLayout>
-            <Frame x:Name="frame" BackgroundColor="LightSkyBlue" HasShadow="True" HeightRequest="50" Padding="1" Margin="10,0,10,0">
-                <StackLayout>
-                    <Label FontAttributes="Bold" HorizontalTextAlignment="Center" Text="{Binding Name}" TextColor="Black"/>
-                </StackLayout>
-            </Frame>
-        </StackLayout>
+        <Frame BackgroundColor="#E8EAF6" HasShadow="True" HeightRequest="60" Padding="1" Margin="10,0,10,0">
+            <StackLayout>
+                <Label HorizontalTextAlignment="Center" Text="{Binding Name}" TextColor="Black"/>
+
+                <xForms:SfListView IsEnabled="False" Orientation="Horizontal" ItemsSource="{Binding AssignedUsers}">
+                    <xForms:SfListView.ItemTemplate>
+                        <DataTemplate >
+                            <Frame HeightRequest="30" WidthRequest="30" CornerRadius="15">
+                                <Image Source="{Binding Image}"/>
+                            </Frame>
+                        </DataTemplate>
+                    </xForms:SfListView.ItemTemplate>
+                </xForms:SfListView>
+            </StackLayout>
+        </Frame>
     </ContentView.Content>
 </ContentView>
