--- a/TaskTracker/TaskTracker/Views/Controls/BoardListItem.xaml
+++ b/TaskTracker/TaskTracker/Views/Controls/BoardListItem.xaml
@@ -4,7 +4,7 @@
              xmlns:xForms="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfListView.XForms"
              x:Class="TaskTracker.Views.Controls.BoardListItem">
     <ContentView.Content>
-        <Frame BackgroundColor="#E8EAF6" HasShadow="True" HeightRequest="60" Padding="1" Margin="10,0,10,0">
+        <Frame BackgroundColor="#E0E0E0" HasShadow="True" HeightRequest="60" Padding="1" Margin="10,0,10,0">
             <StackLayout>
                 <Label HorizontalTextAlignment="Center" Text="{Binding Name}" TextColor="Black"/>
 
