--- a/TaskTracker/TaskTracker/Views/MainPage.xaml
+++ b/TaskTracker/TaskTracker/Views/MainPage.xaml
@@ -3,52 +3,43 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:TaskTracker"
              x:Class="TaskTracker.Views.MainPage"
+             Title="{Binding SelectedBoard.Name}"
              xmlns:sfcarousel="clr-namespace:Syncfusion.SfCarousel.XForms;assembly=Syncfusion.SfCarousel.XForms"
-             xmlns:sflistview="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfListView.XForms">
+             xmlns:sflistview="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfListView.XForms"
+             BackgroundImage="background.jpg">
 
     <ContentPage.Content>
-        <StackLayout VerticalOptions="FillAndExpand">
-            <sfcarousel:SfCarousel ItemsSource="{Binding SelectedBoard.ColumnsCollection}" ViewMode="Linear" RotationAngle="0" ItemSpacing="25">
+        <RelativeLayout VerticalOptions="FillAndExpand">
+            <sfcarousel:SfCarousel ItemsSource="{Binding SelectedBoard.ColumnsCollection}" ViewMode="Linear" RotationAngle="0" ItemSpacing="35">
                 <sfcarousel:SfCarousel.ItemTemplate>
                     <DataTemplate>
-                        <Grid>
+                        <Grid Padding="25,0,25,0">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="45"/>
                                 <RowDefinition Height="*"/>
                             </Grid.RowDefinitions>
+
                             <Grid Grid.Row="0">
-                                <StackLayout BackgroundColor="SkyBlue">
-                                    <Label Text="{Binding Name}" FontAttributes="Bold" TextColor="White" VerticalOptions="Center" HorizontalOptions="Center"/>
-                                </StackLayout>
-                                <StackLayout BackgroundColor="OrangeRed" IsVisible="false">
-                                    <Label Text="{Binding Name}" FontAttributes="Bold" TextColor="White" VerticalOptions="Center" HorizontalOptions="Center"/>
+                                <StackLayout Orientation="Horizontal" BackgroundColor="#BDBDBD">
+                                    <!--<Image Source="delete.xml"></Image>-->
+                                    <Label TextColor="Black" HorizontalTextAlignment="Center" Text="{Binding Name}" FontAttributes="Bold" FontSize="Medium" VerticalOptions="Center" HorizontalOptions="Center"/>
                                 </StackLayout>
                             </Grid>
 
-                            <sflistview:SfListView ItemDragging="SfListView_OnItemDragging" ItemsSource="{Binding TaskCollection}" DragStartMode="OnHold" ItemSpacing="0,5,0,0" Grid.Row="1" >
+                            <sflistview:SfListView BackgroundColor="#C0E0E0E0" AllowSwiping="True" SelectionMode="None" ItemTapped="SfListView_OnItemTapped" ItemDragging="SfListView_OnItemDragging" ItemsSource="{Binding TaskCollection}" DragStartMode="OnHold" ItemSpacing="0,5,0,0" Grid.Row="1" >
                                 <sflistview:SfListView.ItemTemplate>
                                     <DataTemplate>
-                                        <Frame x:Name="frame" BackgroundColor="BurlyWood" HeightRequest="50" Padding="1" >
-                                            <StackLayout>
+                                        <Frame x:Name="frame" BackgroundColor="#EEEEEE" HeightRequest="70" Padding="1" >
+                                            <StackLayout HeightRequest="70">
                                                 <Label Text="{Binding Name}" TextColor="Black"/>
                                             </StackLayout>
                                         </Frame>
                                     </DataTemplate>
                                 </sflistview:SfListView.ItemTemplate>
 
-                                <sflistview:SfListView.SelectedItemTemplate>
-                                    <DataTemplate>
-                                        <Frame x:Name="frame" HasShadow="True" BackgroundColor="CornflowerBlue" HeightRequest="50" Padding="1" >
-                                            <StackLayout>
-                                                <Label Text="{Binding Name}" TextColor="Black"/>
-                                            </StackLayout>
-                                        </Frame>
-                                    </DataTemplate>
-                                </sflistview:SfListView.SelectedItemTemplate>
-
                                 <sflistview:SfListView.DragItemTemplate>
                                     <DataTemplate>
-                                        <Frame x:Name="frame" BackgroundColor="Green" HeightRequest="50" Padding="1" >
+                                        <Frame x:Name="frame" BackgroundColor="#EEEEEE" HeightRequest="50" Padding="1" >
                                             <StackLayout>
                                                 <Label Text="{Binding Name}" TextColor="Black"/>
                                             </StackLayout>
@@ -60,6 +51,6 @@
                     </DataTemplate>
                 </sfcarousel:SfCarousel.ItemTemplate>
             </sfcarousel:SfCarousel>
-        </StackLayout>
+        </RelativeLayout>
     </ContentPage.Content>
 </ContentPage>
